testsuite/tests/vdq-rta/should_fail/all.T
test('T22326_fail_ext1', normal, compile_fail, [''])
test('T22326_fail_ext2', normal, compile_fail, [''])
test('T22326_fail_top', normal, compile_fail, [''])
test('T22326_fail_app', normal, compile_fail, [''])
test('T22326_fail_notInScope', normal, compile_fail, [''])
test('T22326_fail_bang_pat', normal, compile_fail, [''])
test('T22326_fail_lam_arg', normal, compile_fail, [''])
test('T22326_fail_pat', normal, compile_fail, [''])
test('T22326_fail_nonlinear', normal, compile_fail, [''])
test('T22326_fail_caseof', normal, compile_fail, [''])
test('T22326_fail_ado', normal, compile_fail, [''])
test('T22326_fail_n_args', normal, compile_fail, [''])
test('T22326_fail_patsyn', normal, compile_fail, [''])
test('T22326_fail_match', normal, compile_fail, [''])
test('T23738_fail_wild', normal, compile_fail, [''])
test('T23738_fail_implicit_tv', normal, compile_fail, [''])
test('T23738_fail_var', normal, compile_fail, [''])
test('T24176', normal, compile_fail, [''])
test('T23739_fail_ret', normal, compile_fail, [''])
test('T23739_fail_case', normal, compile_fail, [''])
test('T24604', normal, compile_fail, [''])
test('T24604a', normal, compile_fail, [''])
